# lilium-knums

./: .gitignore  .gitmodules  Cargo.toml  Makefile
defs/: base.knum  elf.knum  io.knum  process.knum  syscall.knum  types.knum
defs/base/: config.knum  errnum.knum  error.knum  except.knum  hdl.knum  info.knum  permission.knum  syscall.knum
defs/base/info/: arch.knum
defs/io/: errnum.knum  hdl.knum  io.knum  sysnum.knum
defs/process/: exit.knum  hdl.knum  mem.knum  spawn.knum  syscall.knum
defs/thread/: hdl.knum
defs/types/: duration.knum  hdl.knum  int.knum  option.knum  slice.knum  str.knum  sysresult.knum  uuid.knum
include/lilium-sci/: base.h  syscall.h  types.h
include/lilium-sci/base/: hdl.h  permission.h  syscall.h
include/lilium-sci/process/: hdl.h
include/lilium-sci/thread/: hdl.h
include/lilium-sci/types/: duration.h  hdl.h  int.h  option.h  slice.h  str.h  sysresult.h  uuid.h
lang-spec/: lex.abnf  parse.abnf
src/: ast.rs  cg.rs  defs.rs  lexer.rs  main.rs  nzlit.rs  parse.rs  visit.rs
src/ast/: expr.rs  item.rs  ty.rs
src/base/: config.knum  dispatch.knum  error.knum  except.knum  hdl.knum  info.knum  option.knum  security.knum  subsys.knum  types.knum
src/base/config/: x86.knum
src/base/info/: x86.knum
src/base/types/: slice.knum  str.knum
src/cg/: cheader.rs  markdown.rs
src/io/types/: duration.knum
src/thread/: error.knum  event.knum  hdl.knum  operations.knum  subsys.knum
